Changed autoscaler label content to contain operation id and added tests